# claude-engineer

./: .gitignore  main.py  pyproject.toml
Claude-Eng-v2/: main.py
src/app/components/buttons/: buttons.component.html  buttons.component.scss  buttons.component.ts
