[tool.poetry]
name = "claude-engineer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.34.1"
python-dotenv = "^1.0.1"
tavily-python = "^0.4.0"
pillow = "^10.4.0"
rich = "^13.8.0"
aiohttp = "^3.10.5"
prompt-toolkit = "^3.0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
